Assorted updates to views.py, gmaps.py and googlemaps.html

--- a/chomper/templates/chomper/googlemaps.html
+++ b/chomper/templates/chomper/googlemaps.html
@@ -44,6 +44,10 @@
 					<div class="col-sm-3 col-md-3 text-center"></div>
                     <div class="col-sm-9 col-md-9 text-center">
 						You are viewing {{ datum.numrest }} {{ datum.cuisine }} restaurants between {{ datum.origin }} and {{ datum.destination }} .
+                    <br>
+                        Traveling via {{ datum.mode }} , you are about {{ datum.duration }} away from this point.
+                    <br>
+
 					</div>
 					</div>
 				</div>
