Updates to Yelp functions

--- a/chomper/templates/chomper/index.html
+++ b/chomper/templates/chomper/index.html
@@ -101,30 +101,30 @@
                 <div class="col-sm-9 col-md-9 text-center">
                     <select name="cuisine" style="width: 100%">
                         <option selected="selected" disabled>Select a cuisine</option>
-                        <option value="bbq">BBQ</option>
-                        <option value="italian">Italian / Pizza</option>
-                        <option value="american">American</option>
-                        <option value="southern">Southern</option>
-                        <option value="steakhouse">Steakhouse</option>
-                        <option value="fastfood">Fast Food</option>
-                        <option value="diner">Diner / Breakfast</option>
-                        <option value="casual">Casual</option>
-                        <option value="seafood">Seafood</option>
-                        <option value="vege">Vegetarian</option>
-                        <option value="caribbean">Caribbean</option>
-                        <option value="latin">Latin</option>
-                        <option value="mexican">Mexican</option>
-                        <option value="thai">Thai</option>
-                        <option value="chinese">Chinese</option>
-                        <option value="indian">Indian</option>
-                        <option value="vietnamese">Vietnamese</option>
-                        <option value="japanese">Japanese</option>
-                        <option value="african">African</option>
-                        <option value="spanish">Spanish / Tapas</option>
-                        <option value="mediterranean">Mediterranean</option>
-                        <option value="greek">Greek</option>
-                        <option value="french">French / Belgian</option>
-                        <option value="french">Pub</option>
+                        <option value="BBQ">BBQ</option>
+                        <option value="Italian / Pizza">Italian / Pizza</option>
+                        <option value="American">American</option>
+                        <option value="Southern">Southern</option>
+                        <option value="Steakhouse">Steakhouse</option>
+                        <option value="Fast Food">Fast Food</option>
+                        <option value="Diner / Breakfast">Diner / Breakfast</option>
+                        <option value="Casual">Casual</option>
+                        <option value="Seafood">Seafood</option>
+                        <option value="Vegetarian">Vegetarian</option>
+                        <option value="Caribbean">Caribbean</option>
+                        <option value="Latin">Latin</option>
+                        <option value="Mexican">Mexican</option>
+                        <option value="Thai">Thai</option>
+                        <option value="Chinese">Chinese</option>
+                        <option value="Indian">Indian</option>
+                        <option value="Vietnamese">Vietnamese</option>
+                        <option value="Japanese">Japanese</option>
+                        <option value="African">African</option>
+                        <option value="Spanish / Tapas">Spanish / Tapas</option>
+                        <option value="Mediterranean">Mediterranean</option>
+                        <option value="Greek">Greek</option>
+                        <option value="French / Belgian">French / Belgian</option>
+                        <option value="Pub">Pub</option>
 				    </select>
                 </div>
 
