--- a/chomper/templates/chomper/index.html
+++ b/chomper/templates/chomper/index.html
@@ -35,23 +35,23 @@
             {% load bootstrap %}
 
 
-            <div class="panel panel-default">
-            <div class="panel-body">
-                <div class="col-sm-6 col-md-6 text-center">
-                    <row>On...</row>
-                </div>
-                <div class="col-sm-6 col-md-6 text-center">
-                    <select name="date" style="width: 100%">
-						<option selected="selected" disabled>Select a date / time</option>
-						<option value="today">3/5/2016, Evening</option>
-						<option value="tomorrow">3/6/2016, Afternoon</option>
-					  	<option value="monday">3/7/2016, Evening</option>
-                    </select>
-                </div>
-
-
-            </div>
-            </div>
+{#            <div class="panel panel-default">#}
+{#            <div class="panel-body">#}
+{#                <div class="col-sm-6 col-md-6 text-center">#}
+{#                    <row>On...</row>#}
+{#                </div>#}
+{#                <div class="col-sm-6 col-md-6 text-center">#}
+{#                    <select name="date" style="width: 100%">#}
+{#						<option selected="selected" disabled>Select a date / time</option>#}
+{#						<option value="today">3/5/2016, Evening</option>#}
+{#						<option value="tomorrow">3/6/2016, Afternoon</option>#}
+{#					  	<option value="monday">3/7/2016, Evening</option>#}
+{#                    </select>#}
+{#                </div>#}
+{##}
+{##}
+{#            </div>#}
+{#            </div>#}
 
             <div class="panel panel-default">
             <div class="panel-body">
