--- a/chomper/templates/chomper/index.html
+++ b/chomper/templates/chomper/index.html
@@ -60,8 +60,8 @@
                 </div>
                 <div class="col-sm-6 col-md-6 text-center">
                     <select name="user" style="width: 100%">
-						<option selected="selected" disabled>Select friend</option>
-						<option value="obama">Barry O.</option>
+						<option disabled>Select friend</option>
+						<option value="obama" selected="selected">Barry O.</option>
 						<option value="kdenny">Kevin D.</option>
 					  	<option value="ted">Ted C.</option>
                     </select>
