--- a/chomper/templates/chomper/googlemaps.html
+++ b/chomper/templates/chomper/googlemaps.html
@@ -36,6 +36,11 @@
 	</head>
 
     <body>
+        <script>
+            $(document).ready(function() {
+                $("select").select2();
+            });
+        </script>
 
 		<section class="row">
 			{% if datum %}
@@ -62,38 +67,98 @@
 				  <div class="col-sm-6">
 
 					  <div class="col-xs-12 text-center">
-						  <h2>Google API</h2>
+						  <h3>Enter Locations</h3>
 					  </div>
 
-						<input type="text" name="origin" class="form-control" placeholder="Enter an origin" value="" required autofocus>
-						<input type="text" name="destination" class="form-control" placeholder="Enter a destination" value="" required autofocus>
-						<div class='wrapper text-center'>
-							<div class="btn-group text-center" data-toggle="buttons">
-								<label class="btn btn-default">
-									<input type="radio" id="q156" name="mode" value="driving" /> Driving
-								</label>
-								<label class="btn btn-default">
-									<input type="radio" id="q157" name="mode" value="transit" /> Transit
-								</label>
-								<label class="btn btn-default">
-									<input type="radio" id="q158" name="mode" value="walking" checked="checked" /> Walking
-								</label>
-							</div>
+{#						<input type="text" name="origin" class="form-control" placeholder="Enter an origin" value="" required autofocus>#}
+{#						<input type="text" name="destination" class="form-control" placeholder="Enter a destination" value="" required autofocus>#}
+{#						<div class='wrapper text-center'>#}
+{#							<div class="btn-group text-center" data-toggle="buttons">#}
+{#								<label class="btn btn-default">#}
+{#									<input type="radio" id="q156" name="mode" value="driving" /> Driving#}
+{#								</label>#}
+{#								<label class="btn btn-default">#}
+{#									<input type="radio" id="q157" name="mode" value="transit" /> Transit#}
+{#								</label>#}
+{#								<label class="btn btn-default">#}
+{#									<input type="radio" id="q158" name="mode" value="walking" checked="checked" /> Walking#}
+{#								</label>#}
+{#							</div>#}
+{#						</div>#}
+
+                      <div class="panel panel-default">
+                        <div class="panel-body">
+
+                            <div class="col-xs-12 text-center">
+                                <input type="text" name="origin" class="form-control" placeholder="Enter an origin" value="" required autofocus>
+                                <input type="text" name="destination" class="form-control" placeholder="Enter a destination" value="" required autofocus>
+
+                                <div class="btn-group text-center" data-toggle="buttons">
+                                    <label class="btn btn-default">
+                                        <input type="radio" id="q156" name="mode" value="driving" /> Driving
+                                    </label>
+                                    <label class="btn btn-default">
+                                        <input type="radio" id="q157" name="mode" value="transit" /> Transit
+                                    </label>
+                                    <label class="btn btn-default">
+                                        <input type="radio" id="q158" name="mode" value="walking" checked="checked" /> Walking
+                                    </label>
+                                </div>
 						</div>
+
+                      <button class="btn btn-lg btn-primary btn-block" type="submit">Search</button>
+                      <input type="hidden" name="submit" value="submit" />
+                    </div>
+                    </div>
 
 			  		</div>
 
 				  <div class="col-sm-6">
 
 					  <div class="col-xs-12 text-center">
-						  <h2>Yelp API</h2>
+						  <h3>Select Restaurant Category</h3>
 					  </div>
 
-					<div class="col-xs-12 text-center">
-						<input type="text" name="cuisine" class="form-control" placeholder="Enter a cuisine" value="" required autofocus>
-					</div>
+					<div class="panel panel-default">
+{#                    <div class="panel-heading text-center">Select a cuisine</div>#}
+                    <div class="panel-body">
+                        <div class="col-sm-12 col-md-12 text-center">
+                            <select name="cuisine" style="width: 100%">
+                                <option selected="selected" disabled>Select a cuisine</option>
+                                <option value="BBQ">BBQ</option>
+                                <option value="Italian / Pizza">Italian / Pizza</option>
+                                <option data-divider="true"></option>
+                                <option value="American">American</option>
+                                <option value="Southern">Southern</option>
+                                <option value="Steakhouse">Steakhouse</option>
+                                <option value="Fast Food">Fast Food</option>
+                                <option value="Diner / Breakfast">Diner / Breakfast</option>
+                                <option value="Casual">Casual</option>
+                                <option value="Seafood">Seafood</option>
+                                <option value="Vegetarian">Vegetarian</option>
+                                <option data-divider="true"></option>
+                                <option value="Caribbean">Caribbean</option>
+                                <option value="Latin">Latin</option>
+                                <option value="Mexican">Mexican</option>
+                                <option data-divider="true"></option>
+                                <option value="Thai">Thai</option>
+                                <option value="Chinese">Chinese</option>
+                                <option value="Indian">Indian</option>
+                                <option value="Vietnamese">Vietnamese</option>
+                                <option value="Japanese">Japanese</option>
+                                <option data-divider="true"></option>
+                                <option value="African">African</option>
+                                <option value="Spanish / Tapas">Spanish / Tapas</option>
+                                <option value="Mediterranean">Mediterranean</option>
+                                <option value="Greek">Greek</option>
+                                <option value="French / Belgian">French / Belgian</option>
+                                <option value="Pub">Pub</option>
+                            </select>
+                        </div>
 
-					<div class='wrapper text-center'>
+
+
+{#					<div class='wrapper text-center'>#}
 						<div class="col-xs-12 text-center">
 							<div class="btn-group" data-toggle="buttons">
 								<label class="btn btn-default">
@@ -110,19 +175,19 @@
 								</label>
 							</div>
 						</div>
-					</div>
+{#					</div>#}
 
-				  	<div class='wrapper text-center'>
+{#				  	<div class='wrapper text-center'>#}
 						<div class="col-xs-12 text-center">
 							<div class="checkbox">
 								<label><input type="checkbox" value="">Only show 'Open Now'?</label>
 							</div>
 						</div>
-					</div>
-				  </div>
 
 				  <button class="btn btn-lg btn-primary btn-block" type="submit">Search</button>
 				  <input type="hidden" name="submit" value="submit" />
+                </div>
+                </div>
 			  </form>
 
 			  </div>
